--- a/Kubernetes/7 Deployments/files/deployment.yaml
+++ b/Kubernetes/7 Deployments/files/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: deployment
+  annotations:
+    kubernetes.io/change-cause: "Application version update, image changed"
   labels:
     app: nginx
 spec:
@@ -16,6 +18,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.17.3
+        image: nginx:1.20.1
         ports:
         - containerPort: 80
